添加模板引擎

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,63 +1,94 @@
-#配置静态资源文件路径
+#\uFFFD\uFFFD\uFFFD\u00FE\uFFFD\u032C\uFFFD\uFFFD\u0534\uFFFD\u013C\uFFFD\u00B7\uFFFD\uFFFD
 #spring.resources.static-=classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/,classpath:/test/,file:${web.upload-path} locations
 
-#指定文件不进行热部署
+#\u05B8\uFFFD\uFFFD\uFFFD\u013C\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\u0232\uFFFD\uFFFD\uFFFD
 ##spring.devtools.restart.exclude=static/**,public/**
 
-#手工触发重启
+#\uFFFD\u05B9\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD
 spring.devtools.restart.trigger-file=trigger.txt
 
-#服务器端口号配置
+#\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\u02FF\u06BA\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD
 server.port=8083
 
-#文件上传路径配置
+#\uFFFD\u013C\uFFFD\uFFFD\u03F4\uFFFD\u00B7\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD
 web.file.path=D:/idea/jizhifai/src/main/resources/static
 
-##测试配置文件注入
+##\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\u013C\uFFFD\u05E2\uFFFD\uFFFD
 #test.domain=www.xdclass.net
 #test.name=springboot
 
-#自定义启动banner文件的路径
+#\uFFFD\u0536\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFDbanner\uFFFD\u013C\uFFFD\uFFFD\uFFFD\u00B7\uFFFD\uFFFD
 spring.banner.location=banner.txt
 
 
-#mysql信息配置
-#可以自动识别
+#mysql\uFFFD\uFFFD\u03E2\uFFFD\uFFFD\uFFFD\uFFFD
+#\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\u0536\uFFFD\u02B6\uFFFD\uFFFD
 #spring.datasource.driver-class-name =com.mysql.jdbc.Driver
 
 spring.datasource.url=jdbc:mysql://localhost:3306/jzfai?useUnicode=true&characterEncoding=utf-8
 spring.datasource.username =root
 spring.datasource.password =jzfai
 
-#使用阿里巴巴druid数据源，默认使用自带的
+#\u02B9\uFFFD\u00F0\uFFFD\uFFFD\uFFFD\u0370\uFFFDdruid\uFFFD\uFFFD\uFFFD\uFFFD\u0534\uFFFD\uFFFD\u012C\uFFFD\uFFFD\u02B9\uFFFD\uFFFD\uFFFD\u0534\uFFFD\uFFFD\uFFFD
 spring.datasource.type =com.alibaba.druid.pool.DruidDataSource
 
-#开启控制台打印sql
+#\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\u0328\uFFFD\uFFFD\u04E1sql
 mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 
 
-#=========redis基础配置=========
+#=========redis\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD=========
 spring.redis.database=2
 spring.redis.host=127.0.0.1
 #spring.redis.port=6390
-# 连接超时时间 单位 ms（毫秒）
+# \uFFFD\uFFFD\uFFFD\u04F3\uFFFD\u02B1\u02B1\uFFFD\uFFFD \uFFFD\uFFFD\u03BB ms\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uB8E9
 #spring.redis.timeout=3000
 
-#=========redis线程池设置=========
-# 连接池中的最大空闲连接，默认值也是8。
+#=========redis\uFFFD\u07F3\u0333\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD=========
+# \uFFFD\uFFFD\uFFFD\u04F3\uFFFD\uFFFD\u0435\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\u04E3\uFFFD\u012C\uFFFD\uFFFD\u05B5\u04B2\uFFFD\uFFFD8\uFFFD\uFFFD
 #spring.redis.pool.max-idle=200
 #
-##连接池中的最小空闲连接，默认值也是0。
+##\uFFFD\uFFFD\uFFFD\u04F3\uFFFD\uFFFD\u0435\uFFFD\uFFFD\uFFFD\u0421\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\u04E3\uFFFD\u012C\uFFFD\uFFFD\u05B5\u04B2\uFFFD\uFFFD0\uFFFD\uFFFD
 #spring.redis.pool.min-idle=200
 #
-## 如果赋值为-1，则表示不限制；pool已经分配了maxActive个jedis实例，则此时pool的状态为exhausted(耗尽)。
+## \uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\u05B5\u03AA-1\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\u02BE\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\u01A3\uFFFDpool\uFFFD\u047E\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFDmaxActive\uFFFD\uFFFDjedis\u02B5\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\u02B1pool\uFFFD\uFFFD\u05F4\u032C\u03AAexhausted(\uFFFD\u013E\uFFFD)\uFFFD\uFFFD
 #spring.redis.pool.max-active=2000
 #
-## 等待可用连接的最大时间，单位毫秒，默认值为-1，表示永不超时
+## \uFFFD\u0234\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\u04F5\uFFFD\uFFFD\uFFFD\uFFFD\u02B1\uFFFD\u48EC\uFFFD\uFFFD\u03BB\uFFFD\uFFFD\uFFFD\uB8EC\u012C\uFFFD\uFFFD\u05B5\u03AA-1\uFFFD\uFFFD\uFFFD\uFFFD\u02BE\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\u02B1
 #spring.redis.pool.max-wait=1000
 
 
 
 
+#\u7F16\u8F91emp\u7684\u6570\u636E
+emp.last-name=\u674E\u56DB
 
+emp.birthday=1989/9/12
+emp.boss=false
+emp.salary=23000
+emp.map.key1=value1
+emp.map.key2=value2
+emp.list=one, two, three
+emp.forte.name=python
+emp.forte.time=5
+
+
+
+
+#\u6FC0\u6D3B\u73AF\u5883\u914D\u7F6E prod
+#spring.profiles.active=dev
+
+
+# \u8FD9\u662F\u4FEE\u6539springboog\u7684root\u7EA7\u522B\uFF08\u9ED8\u8BA4\u7EA7\u522B\uFF09
+logging.level.root=info
+
+#\u8F93\u51FA\u5230\u5F53\u524D\u9879\u76EE\u6839\u8DEF\u5F84\u4E0B\u7684 springboot.log \u6587\u4EF6\u4E2D
+logging.file=fai.log
+#\u8F93\u51FA\u5230\u5F53\u524D\u9879\u76EE\u6240\u5728\u78C1\u76D8\u6839\u76EE\u5F55\u4E0B \u7684 springboot/log\u76EE\u5F55 \u4E0B\u7684spring.log\u6587\u4EF6\u4E2D
+#logging.path=/springboot/log
+
+# \u4FEE\u6539\u5F53\u524D\u63A7\u5236\u53F0\u8F93\u51FA\u683C\u5F0F
+logging.pattern.console=%d{yyyy-MM-dd} == [%thread] == %-5level == %logger{50} - %msg%n
+
+# \u4FEE\u6539\u65E5\u5FD7\u6587\u4EF6\u4E2D\u8F93\u51FA\u683C\u5F0F
+logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss.SSS} >>> [%thread] >>> %-5level >>> %logger{50} >>> %msg%n
 
