--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@
 spring.devtools.restart.trigger-file=trigger.txt
 
 #服务器端口号配置
-server.port=8083
+server.port=8088
 
 #文件上传路径配置
 web.file.path=D:/idea/jizhifai/src/main/resources/static
@@ -25,9 +25,9 @@ spring.banner.location=banner.txt
 #可以自动识别
 #spring.datasource.driver-class-name =com.mysql.jdbc.Driver
 
-spring.datasource.url=jdbc:mysql://localhost:3306/jzfai?useUnicode=true&characterEncoding=utf-8
+spring.datasource.url=jdbc:mysql://localhost:3306/javap?useUnicode=true&characterEncoding=utf-8
 spring.datasource.username =root
-spring.datasource.password =jzfai
+spring.datasource.password =kuhu8866
 
 #使用阿里巴巴druid数据源，默认使用自带的
 spring.datasource.type =com.alibaba.druid.pool.DruidDataSource
