--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@
 spring.devtools.restart.trigger-file=trigger.txt
 
 #服务器端口号配置
-server.port=8088
+server.port=8090
 
 #文件上传路径配置
 web.file.path=D:/idea/jizhifai/src/main/resources/static
@@ -19,7 +19,6 @@ web.file.path=D:/idea/jizhifai/src/main/resources/static
 
 #自定义启动banner文件的路径
 spring.banner.location=banner.txt
-
 
 #mysql信息配置
 #可以自动识别
@@ -55,6 +54,14 @@ spring.redis.host=127.0.0.1
 #
 ## 等待可用连接的最大时间，单位毫秒，默认值为-1，表示永不超时
 #spring.redis.pool.max-wait=1000
+
+
+#mybits配置
+mybatis.mapper-locations= classpath:mybatis/mapper/*.xml
+#映射配置文件路径
+mybatis.config-location=classpath:mybatis/mybatis-config.xml
+#核心配置文件路径
+
 
 
 
